<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Bluetooth Connection Log</string>

    <string name="formatter_device_count">Devices: %d</string>
    <string name="label_bluetooth_status">Bluetooth:</string>
    <string name="label_location_permission">Location Access</string>
    <string name="permission_denied">Denied</string>
    <string name="permission_granted">Granted</string>
    <string name="permission_granted_foreground_only">Granted - Foreground only</string>
    <string name="off">Off</string>
    <string name="on">On</string>

    <string name="no_devices_empty_text">No bluetooth events.\nTry connecting to a device.</string>
    <string name="no_log_entries_empty_text">No data</string>

    <!-- Activity Titles -->
    <string name="title_item_detail">Connection Log</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Menu Items -->
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_favourite">Favourite</string>
    <string name="menu_item_not_favourite">Not Favourite</string>
    <string name="menu_item_show_info">Device Info</string>

    <!-- Device Event Toasts -->
    <string name="toast_device_connected">BT device connected: \'%s\'</string>
    <string name="toast_fav_device_connected">BT ★ device connected: \'%s\'</string>
    <string name="toast_device_disconnected">BT device disconnected: \'%s\'</string>
    <string name="toast_fav_device_disconnected">BT ★ device disconnected: \'%s\'</string>
    <string name="toast_device_disconnect_requested">BT device disconnect req: \'%s\'</string>
    <string name="toast_fav_device_disconnect_requested">BT ★ device disconnect req: \'%s\'</string>
</resources>
