<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".ui.main.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
                android:id="@+id/itemStatusContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent">

            <GridLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:columnCount="2">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="0"
                        android:layout_column="0"
                        android:layout_gravity="start"
                        android:text="@string/label_bluetooth_status"
                        android:textStyle="bold" />

                <TextView
                        android:id="@+id/tvBluetoothStatus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="0"
                        android:layout_column="1"
                        android:layout_marginStart="28dp"
                        android:gravity="end"
                        android:text="@string/off" />

                <TextView
                        android:layout_row="1"
                        android:layout_column="0"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/label_location_permission"
                        android:textStyle="bold" />

                <TextView
                        android:id="@+id/tvLocationStatus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="1"
                        android:layout_column="1"
                        android:layout_marginStart="28dp"
                        android:gravity="end"
                        android:text="@string/permission_denied" />
            </GridLayout>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorSeparator" />
        </LinearLayout>

        <uk.co.alt236.bluetoothconnectionlog.ui.views.ProgressDataListView
                android:id="@+id/item_list"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@+id/itemCountContainer"
                app:layout_constraintTop_toBottomOf="@+id/itemStatusContainer"
                tools:context=".ui.main.MainActivity" />

        <LinearLayout
                android:id="@+id/itemCountContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent">

            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorSeparator" />

            <TextView
                    android:id="@+id/tvItemCount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/formatter_device_count" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>